# tinygit

./: CMakeLists.txt  README.md  combined_tinygit.cpp
examples/myrepo/test1/.tinygit/refs/heads/: master
examples/myrepo3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tinygit.cpp
examples/myrepo3/jbrepo1/: hallo.txt
examples/myrepo3/jbrepo1/.tinygit/refs/heads/: master
myrepo/: CMakeLists.txt  tinygit.cpp
myrepo/test1/: hallo.txt  tinygit
myrepo2/test2/: hallo.txt
myrepo2/test2/.tinygit/refs/heads/: master
